--- a/sugar-buttons/index.html
+++ b/sugar-buttons/index.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>SugarLabsGCI'16</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,400i,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+  
+      <link rel="stylesheet" href="css/style.css">
+
+  
+</head>
+
+<body>
+  <h1>Hello World</h1>
+<p>made by 
+<hr></hr>GCI 2016 EmilyOng</p>
+<hr></hr>
+<div class='center'>
+	<div class='field'>
+		
+		<button class='has-tooltip' style="background-color:blue">When was the Sugar Labs organization formed?</button>
+		<span class='tooltip blue'><p> The Sugar Labs was formed on May 15th, 2008 in Boston, MA, United States of America.</p></span>
+	</div>
+	<div class='field'>
+		<button class='has-tooltip' style="background-color:pink">What is the standard Sugar license?</button>
+		<span class='tooltip red'><P>
+Materials created by the Sugar Labs contributors are usually shared on GNU GPL free software license.</p>
+		
+		</span>
+	</div>
+	
+	<div class='field'>
+		<button class='has-tooltip' style="background-color:lightgreen">What type of organization is the Sugar Labs?</button>
+		<span class='tooltip green'>
+			<p>The Sugar Labs is a non-governmental (NGO) and non-profit organization with wide educational goals.</p>
+		</span>
+	</div>
+	
+	<div class='field'>
+		<button class='has-tooltip' style="background-color:grey">What is the website of the Sugar Labs?</button>
+		<span class='tooltip'>
+			<p>The Sugar Labs main website is http://sugarlabs.org/ </p>
+		</span>
+	</div>
+	
+	<div class='field'>
+		<button class='has-tooltip' style="background-color:purple">What is an activity?</button>
+		<span class='tooltip purple'>
+			<p> Activity is a small educational application (like this one) built into Sugar. Anyone can create an activity, also you!...
+ </p>
+		</span>
+	</div>
+</div>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+
+  
+</body>
+</html>
